반응형으로 바꾸는중 1

--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -63,7 +63,7 @@
           <i class="fa-solid fa-plus"></i>
         </div>
         <div class="line"></div>
-        <table>
+        <table class="table1">
           <tr>
             <td>[행사]2025년 양산도서관 겨울 독서교실...</td>
             <td>12.04</td>
