다시는 이딴 노가다를 하지 않겠노라

--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -224,6 +224,8 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="second2">
       <div class="subMenu">
         <div class="libraryLoan">
           <div class="icon">
@@ -263,7 +265,6 @@
         </div>
       </div>
     </section>
-
     <section class="third">
       <div class="word">
         <p>행정서비스현장</p>
