--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -218,7 +218,7 @@
               <p><b>카카오톡 채널</b></p>
             </div>
             <div class="instagram">
-              <i class="fa-brands fa-square-instagram"></i>
+              <i class="fa-brands fa-instagram"></i>
               <p><b>인스타그램</b></p>
             </div>
           </div>
