ysLib css html % 수정

--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -79,7 +79,7 @@
       <li>소식지"나루터"</li> -->
     </div>
   </nav>
-  <nav class="nav2">
+  <!-- <nav class="nav2">
     <p class="howToUseP">이용시간/휴관일</p>
     <hr>
     <p class="howToUseP">자료이용안내</p>
@@ -88,7 +88,7 @@
     <hr>
     <p class="howToUseP">오시는길</p>
     <hr>
-    <p class="howToUseP">책이음 이용안내</p>
+    <p class="howToUseP">책이음 이용안내</p> -->
 <!-- 
     <p>자료찾기</p>
     <p>신착자료</p>
