--- a/yangsanLibLogin.html
+++ b/yangsanLibLogin.html
@@ -79,7 +79,18 @@
     </div>
     </fieldset>
   </main>
-  <footer>
+  <footer class="first">
+    <div class="word">
+      <p>행정서비스현장</p>
+      <hr>
+      <p class="important">개인정보처리방침</p>
+      <hr>
+      <p>정보공개</p>
+      <hr>
+      <p>조직도</p>
+    </div>
+  </footer>
+  <footer class="second">
     <div class="image">
       <img src="images/libraryLogo.png">
     </div>
