--- a/libCreateAccount.html
+++ b/libCreateAccount.html
@@ -13,15 +13,19 @@
 
 <body>
   <header>
-    <p class="headerMenu">처음으로</p>
+    <a href="yangsanLib.html" class="headerMenu">처음으로</a>
     <hr>
-    <p class="headerMenu">로그인</p>
+    <a href="yangsanLibLogin.html" class="headerMenu">로그인</a>
     <hr>
-    <p class="headerMenu">회원가입</p>
+    <a href="libCreateAccount.html" class="headerMenu"> 회원가입</a>
     <hr>
-    <p class="headerMenu">사이트맵</p>
+    <a href="#" class="headerMenu">
+      <p onclick="alert('아직 구현되지 않은 내용입니다.')">사이트맵</p>
+    </a>
     <hr>
-    <p class="headerMenu">통합공공도서관</p>
+    <a href="#" class="headerMenu">
+      <p onclick="alert('아직 구현되지 않은 내용입니다.')">통합공공도서관</p>
+    </a>
     <div class="headerBlank"></div>
   </header>
 
@@ -43,7 +47,7 @@
     <div class="remote">
       <p>나의 도서관</p>
       <div class="rest">
-        <p class="restLogin">로그인</p>
+        <a href="yangsanLibLogin.html"><p class="restLogin">로그인</p></a>
         <p class="restAccount">회원가입</p>
         <p>아이디/비밀번호찾기</p>
       </div>
@@ -100,7 +104,19 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="first">
+    <div class="word">
+      <p>행정서비스현장</p>
+      <hr>
+      <p class="important">개인정보처리방침</p>
+      <hr>
+      <p>정보공개</p>
+      <hr>
+      <p>조직도</p>
+    </div>
+  </footer>
+
+  <footer class="second">
     <div class="image">
       <img src="images/libraryLogo.png">
     </div>
