노트북이랑 학원 컴퓨터 모니터 크기가 달라서 집에서 볼때랑 여기서 볼때랑 차이가 많이 남. 주의

--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -35,13 +35,68 @@
     <div class="nav1">
       <h3>이용안내</h3>
       <h3>자료찾기</h3>
-      <h3>전자도서관</h3>
+      <a href="#" class="navMenu">
+        <h3 onclick="alert('아직 구현되지 않은 내용입니다.')">전자도서관</h3>
+      </a>
       <h3>독서문화</h3>
       <h3>학교도서관지원</h3>
       <h3>평생학습</h3>
       <h3>열린마당</h3>
       <h3>도서관소개</h3>
+
+
+      <!--
+      <li>이달의 행사</li>
+      <li>독서동아리</li>
+      <li>독서프로그램</li>
+      <li>독서치유</li>
+      <li>도서관과행복한동행</li>
+      <li>책이야기나눔터</li>
+
+      <li>학교도서관지원소개</li>
+      <li>지원신청</li>
+      <li>묻고답하기</li>
+      <li>자료실</li>
+
+      <li>프로그램안내</li>
+      <li>프로그램신청</li>
+      <li>학습동아리</li>
+
+      <li>알려드립니다</li>
+      <li>행사공지</li>
+      <li>열린소리함</li>
+      <li>자주묻는질문</li>
+      <li>청소년 자원봉사</li>
+      <li>공개자료실</li>
+      <li>정보공개/공공데이터개방</li>
+
+      <li>인사말</li>
+      <li>연혁</li>
+      <li>조직현황</li>
+      <li>시설현황</li>
+      <li>자료현황</li>
+      <li>자체발간자료</li>
+      <li>소식지"나루터"</li> -->
     </div>
+  </nav>
+  <!-- <nav class="nav2">
+    <p class="howToUseP">이용시간/휴관일</p>
+    <hr>
+    <p class="howToUseP">자료이용안내</p>
+    <hr>
+    <p class="howToUseP">실별안내</p>
+    <hr>
+    <p class="howToUseP">오시는길</p>
+    <hr>
+    <p class="howToUseP">책이음 이용안내</p> -->
+<!-- 
+    <p>자료찾기</p>
+    <p>신착자료</p>
+    <p>추천자료</p>
+    <p>구독간행물</p>
+    <p>희망도서신청</p>
+    <p>내 서재</p>
+    <p>상호대차</p> -->
   </nav>
 
   <main>
@@ -63,7 +118,7 @@
           <i class="fa-solid fa-plus"></i>
         </div>
         <div class="line"></div>
-        <table>
+        <table class="table1">
           <tr>
             <td>[행사]2025년 양산도서관 겨울 독서교실...</td>
             <td>12.04</td>
@@ -218,12 +273,14 @@
               <p><b>카카오톡 채널</b></p>
             </div>
             <div class="instagram">
-              <i class="fa-brands fa-square-instagram"></i>
+              <i class="fa-brands fa-instagram"></i>
               <p><b>인스타그램</b></p>
             </div>
           </div>
         </div>
       </div>
+    </section>
+    <section class="second2">
       <div class="subMenu">
         <div class="libraryLoan">
           <div class="icon">
@@ -263,7 +320,6 @@
         </div>
       </div>
     </section>
-
     <section class="third">
       <div class="word">
         <p>행정서비스현장</p>
