--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/ysLIbHeader.css">
+    <link rel="stylesheet" href="css/ysLibNavigation.css">
 </head>
 
 <body>
@@ -97,7 +99,7 @@
     <p>희망도서신청</p>
     <p>내 서재</p>
     <p>상호대차</p> -->
-  </nav>
+  <!-- </nav> -->
 
   <main>
     <div class="backgroundImage">
