--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/ysLIbHeader.css">
-    <link rel="stylesheet" href="css/ysLibNavigation.css">
+  <link rel="stylesheet" href="css/ysLIbHeader.css">
+  <link rel="stylesheet" href="css/ysLibNavigation.css">
 </head>
 
 <body>
@@ -32,74 +32,108 @@
   </header>
 
   <!-- 마우스 올리면 색 변하고 다른 작은 메뉴들 나오게 -->
-  <nav>
+  <nav class="nav1">
     <a href="yangsanLib.html"><img src="images/libraryLogo.png" class="libraryLogo"></a>
-    <div class="nav1">
-      <h3>이용안내</h3>
-      <h3>자료찾기</h3>
-      <a href="#" class="navMenu">
-        <h3 onclick="alert('아직 구현되지 않은 내용입니다.')">전자도서관</h3>
-      </a>
-      <h3>독서문화</h3>
-      <h3>학교도서관지원</h3>
+    <div class="navMenu">
+      <span>
+        <h3>이용안내</h3>
+      </span>
+      <div class="navMenuInside">
+        <ul>
+          <li>이용시간/휴관일</li>
+          <li>자료이용안내</li>
+          <li>실별안내</li>
+          <li>오시는길</li>
+          <li>책이음 이용안내</li>
+        </ul>
+      </div>
+    </div>
+    <div class="navMenu">
+      <span>
+        <h3>자료찾기</h3>
+      </span>
+      <div class="navMenuInside">
+        <ul>
+          <li>자료찾기</li>
+          <li>신착자료</li>
+          <li>추천자료</li>
+          <li>구독간행물</li>
+          <li>희망도서신청</li>
+          <li>내 서재</li>
+          <li>상호대차</li>
+        </ul>
+      </div>
+    </div>
+    <a href="#" class="navMenu3">
+      <h3 onclick="alert('아직 구현되지 않은 내용입니다.')">전자도서관</h3>
+    </a>
+    <div class="navMenu">
+      <span>
+        <h3>독서문화</h3>
+      </span>
+      <div class="navMenuInside">
+        <ul>
+          <li>이달의 행사</li>
+          <li>독서동아리</li>
+          <li>독서프로그램</li>
+          <li>독서치유</li>
+          <li>도서관과행복한동행</li>
+          <li>책이야기나눔터</li>
+        </ul>
+      </div>
+    </div>
+    <div class="navMenu">
+      <span>
+        <h3>학교도서관지원</h3>
+      </span>
+      <div class="navMenuInside">
+        <ul>
+          <li>학교도서관지원소개</li>
+          <li>지원신청</li>
+          <li>묻고답하기</li>
+          <li>자료실</li>
+        </ul>
+      </div>
+    </div>
+    <div class="navMenu">
       <h3>평생학습</h3>
+      <div class="navMenuInside">
+        <ul>
+          <li>프로그램안내</li>
+          <li>프로그램신청</li>
+          <li>학습동아리</li>
+        </ul>
+      </div>
+    </div>
+    <div class="navMenu">
       <h3>열린마당</h3>
+      <div class="navMenuInside">
+        <ul>
+          <li>알려드립니다.</li>
+          <li>행사공지</li>
+          <li>열린소리함</li>
+          <li>자주묻는질문</li>
+          <li>청소년 자원봉사</li>
+          <li>공개자료실</li>
+          <li>정보공개/공공데이터개방</li>
+        </ul>
+      </div>
+    </div>
+    <div class="navMenu">
       <h3>도서관소개</h3>
-
-
-      <!--
-      <li>이달의 행사</li>
-      <li>독서동아리</li>
-      <li>독서프로그램</li>
-      <li>독서치유</li>
-      <li>도서관과행복한동행</li>
-      <li>책이야기나눔터</li>
-
-      <li>학교도서관지원소개</li>
-      <li>지원신청</li>
-      <li>묻고답하기</li>
-      <li>자료실</li>
-
-      <li>프로그램안내</li>
-      <li>프로그램신청</li>
-      <li>학습동아리</li>
-
-      <li>알려드립니다</li>
-      <li>행사공지</li>
-      <li>열린소리함</li>
-      <li>자주묻는질문</li>
-      <li>청소년 자원봉사</li>
-      <li>공개자료실</li>
-      <li>정보공개/공공데이터개방</li>
-
-      <li>인사말</li>
-      <li>연혁</li>
-      <li>조직현황</li>
-      <li>시설현황</li>
-      <li>자료현황</li>
-      <li>자체발간자료</li>
-      <li>소식지"나루터"</li> -->
+      <div class="navMenuInside">
+        <ul>
+          <li>인사말</li>
+          <li>연혁</li>
+          <li>조직현황</li>
+          <li>시설현황</li>
+          <li>자료현황</li>
+          <li>자체발간자료</li>
+          <li>소식지"나루터"</li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <!-- <nav class="nav2">
-    <p class="howToUseP">이용시간/휴관일</p>
-    <hr>
-    <p class="howToUseP">자료이용안내</p>
-    <hr>
-    <p class="howToUseP">실별안내</p>
-    <hr>
-    <p class="howToUseP">오시는길</p>
-    <hr>
-    <p class="howToUseP">책이음 이용안내</p> -->
-<!-- 
-    <p>자료찾기</p>
-    <p>신착자료</p>
-    <p>추천자료</p>
-    <p>구독간행물</p>
-    <p>희망도서신청</p>
-    <p>내 서재</p>
-    <p>상호대차</p> -->
-  <!-- </nav> -->
 
   <main>
     <div class="backgroundImage">
