--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -39,13 +39,11 @@
         <h3>이용안내</h3>
       </span>
       <div class="navMenuInside">
-        <ul>
-          <li>이용시간/휴관일</li>
-          <li>자료이용안내</li>
-          <li>실별안내</li>
-          <li>오시는길</li>
-          <li>책이음 이용안내</li>
-        </ul>
+        <p>이용시간/휴관일</p>
+        <p>자료이용안내</p>
+        <p>실별안내</p>
+        <p>오시는길</p>
+        <p>책이음 이용안내</p>
       </div>
     </div>
     <div class="navMenu">
@@ -53,15 +51,13 @@
         <h3>자료찾기</h3>
       </span>
       <div class="navMenuInside">
-        <ul>
-          <li>자료찾기</li>
-          <li>신착자료</li>
-          <li>추천자료</li>
-          <li>구독간행물</li>
-          <li>희망도서신청</li>
-          <li>내 서재</li>
-          <li>상호대차</li>
-        </ul>
+        <p>자료찾기</p>
+        <p>신착자료</p>
+        <p>추천자료</p>
+        <p>구독간행물</p>
+        <p>희망도서신청</p>
+        <p>내 서재</p>
+        <p>상호대차</p>
       </div>
     </div>
     <a href="#" class="navMenu3">
@@ -72,14 +68,12 @@
         <h3>독서문화</h3>
       </span>
       <div class="navMenuInside">
-        <ul>
-          <li>이달의 행사</li>
-          <li>독서동아리</li>
-          <li>독서프로그램</li>
-          <li>독서치유</li>
-          <li>도서관과행복한동행</li>
-          <li>책이야기나눔터</li>
-        </ul>
+        <p>이달의 행사</p>
+        <p>독서동아리</p>
+        <p>독서프로그램</p>
+        <p>독서치유</p>
+        <p>도서관과행복한동행</p>
+        <p>책이야기나눔터</p>
       </div>
     </div>
     <div class="navMenu">
@@ -87,50 +81,42 @@
         <h3>학교도서관지원</h3>
       </span>
       <div class="navMenuInside">
-        <ul>
-          <li>학교도서관지원소개</li>
-          <li>지원신청</li>
-          <li>묻고답하기</li>
-          <li>자료실</li>
-        </ul>
+        <p>학교도서관지원소개</p>
+        <p>지원신청</p>
+        <p>묻고답하기</p>
+        <p>자료실</p>
       </div>
     </div>
     <div class="navMenu">
       <h3>평생학습</h3>
       <div class="navMenuInside">
-        <ul>
-          <li>프로그램안내</li>
-          <li>프로그램신청</li>
-          <li>학습동아리</li>
-        </ul>
+        <p>프로그램안내</p>
+        <p>프로그램신청</p>
+        <p>학습동아리</p>
       </div>
     </div>
     <div class="navMenu">
       <h3>열린마당</h3>
       <div class="navMenuInside">
-        <ul>
-          <li>알려드립니다.</li>
-          <li>행사공지</li>
-          <li>열린소리함</li>
-          <li>자주묻는질문</li>
-          <li>청소년 자원봉사</li>
-          <li>공개자료실</li>
-          <li>정보공개/공공데이터개방</li>
-        </ul>
+          <p>알려드립니다.</p>
+          <p>행사공지</p>
+          <p>열린소리함</p>
+          <p>자주묻는질문</p>
+          <p>청소년 자원봉사</p>
+          <p>공개자료실</p>
+          <p>정보공개/공공데이터개방</p>
       </div>
     </div>
     <div class="navMenu">
       <h3>도서관소개</h3>
       <div class="navMenuInside">
-        <ul>
-          <li>인사말</li>
-          <li>연혁</li>
-          <li>조직현황</li>
-          <li>시설현황</li>
-          <li>자료현황</li>
-          <li>자체발간자료</li>
-          <li>소식지"나루터"</li>
-        </ul>
+          <p>인사말</p>
+          <p>연혁</p>
+          <p>조직현황</p>
+          <p>시설현황</p>
+          <p>자료현황</p>
+          <p>자체발간자료</p>
+          <p>소식지"나루터"</p>
       </div>
     </div>
   </nav>
