--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -142,7 +142,7 @@
         <div class="line"></div>
         <table class="table1">
           <tr>
-            <td>[행사]2025년 양산도서관 겨울 독서교실...</td>
+            <td>[행사]2 양산도서관 겨울 독서교실...</td>
             <td>12.04</td>
           </tr>
           <tr>
