여러가지 손댐

--- a/yangsanLib.html
+++ b/yangsanLib.html
@@ -32,6 +32,8 @@
   </header>
 
   <!-- 마우스 올리면 색 변하고 다른 작은 메뉴들 나오게 -->
+  <!-- 여러 시도를 해봤는데 이 이상은 못하겠어요 -->
+  <!-- 만약에 더 좋은 방법이 있다면 알려주시면 감사하겠습니다. -->
   <nav class="nav1">
     <a href="yangsanLib.html"><img src="images/libraryLogo.png" class="libraryLogo"></a>
     <div class="navMenu">
@@ -98,25 +100,25 @@
     <div class="navMenu">
       <h3>열린마당</h3>
       <div class="navMenuInside">
-          <p>알려드립니다.</p>
-          <p>행사공지</p>
-          <p>열린소리함</p>
-          <p>자주묻는질문</p>
-          <p>청소년 자원봉사</p>
-          <p>공개자료실</p>
-          <p>정보공개/공공데이터개방</p>
+        <p>알려드립니다.</p>
+        <p>행사공지</p>
+        <p>열린소리함</p>
+        <p>자주묻는질문</p>
+        <p>청소년 자원봉사</p>
+        <p>공개자료실</p>
+        <p>정보공개/공공데이터개방</p>
       </div>
     </div>
     <div class="navMenu">
       <h3>도서관소개</h3>
       <div class="navMenuInside">
-          <p>인사말</p>
-          <p>연혁</p>
-          <p>조직현황</p>
-          <p>시설현황</p>
-          <p>자료현황</p>
-          <p>자체발간자료</p>
-          <p>소식지"나루터"</p>
+        <p>인사말</p>
+        <p>연혁</p>
+        <p>조직현황</p>
+        <p>시설현황</p>
+        <p>자료현황</p>
+        <p>자체발간자료</p>
+        <p>소식지"나루터"</p>
       </div>
     </div>
   </nav>
